src/Header/Header.css
header {
  background: #3f51b5;
  width: 100%;
  height: 15em;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

header .wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  margin: auto;
}

header h3 {
  color: white;
  margin: 0;
}

header div {
  color:whitesmoke;
}

header .profile {
  border-radius: 50%;
}
header .networks {
  flex-direction: row;
}

header .networks img {
  margin: 0 0.5em 0 0.5em;
  height: 24px;
}

.header-desc {
  width: 100%;
  font-size: 1.0rem;
  margin-top: -25px;
}

.header-desc i {
  margin-left: 3em;
  background: rgba(0,0,0,.4);
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

